correction du contrast de la page 2 et ajustement de la partie formulaire

--- a/Starting website 2/style.css
+++ b/Starting website 2/style.css
@@ -508,6 +508,7 @@ button {
 .form-control {
     border-color: rgba(0, 0, 0, .1);
     box-shadow: none;
+    padding-right: 15em;
 }
 
 .scrollToTop {
@@ -654,6 +655,13 @@ a {
     color: #141414!important;
 }
 
+#form_1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    grid-gap: 0.5em;
+}
+
 .container {
     max-width: 1000px;
 }
@@ -776,6 +784,10 @@ h4 {
 
 .tc-white {
     color: #ffff!important;
+}
+
+.tc-black{
+    color: #141414!important;
 }
 
 .btn-atomic-tangerine {
